data/derived/comb/progs/unify/prog8549.ml.out
Characters 139-151:
  | Sine sin -> Printf.printf ("sin(pi*%s)" sin);
                               ^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
